tests/incremental_no_implicitly_include_root/incremental_no_implicitly_include_root.exp
Error ------------------------------------------------------------------------------------------------- included.js:1:19

Cannot assign `3` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   included.js:1:19
   1| const a: string = 3; // error
                        ^ [1]

References:
   included.js:1:10
   1| const a: string = 3; // error
               ^^^^^^ [2]



Found 1 error
Error ------------------------------------------------------------------------------------------------- included.js:1:19

Cannot assign `3` to `a` because number [1] is incompatible with string [2]. [incompatible-type]

   included.js:1:19
   1| const a: string = 3; // error
                        ^ [1]

References:
   included.js:1:10
   1| const a: string = 3; // error
               ^^^^^^ [2]



Found 1 error
